--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8081
+server.port:8081
 spring.datasource.url=jdbc:mysql://localhost:3306/taco
 spring.datasource.username=root
-spring.datasource.password=03092001
+spring.datasource.password=abcd
 spring.datasource.initialization-mode=always
